# En4S

./: .gitignore  README.md  build_functions.sh  build_layers.sh  build_lib.sh
app/: asynces.py
app/ETL/: helper.py  index.py
app/analytics/: cv2_helper.py  helper.py  iio_helper.py  index.py  local_requirements.txt  requirements.txt  test_mono.py  test_mono_s3.py
app/terasort/: access.py  collect_sort_traces.py  index.py  mapper.py  reducer.py  requirements.txt  test_sort_s3.py
controller/: README.md
deploy/: README.md  env.sh  fish_env.sh  lambda.tf  layer.tf  main.tf  network.tf  output.tf  security.tf  storage.tf  variable.tf
function_docker/: analytics.dockerfile
layer_docker/: cv2_headless.dockerfile  iio.dockerfile  numpy.dockerfile  thrift.dockerfile
lib/: README.md  build.dockerfile  build.py  clean.sh  pyproject.toml
lib/asyncreflex/: __init__.py  connection.pyx  consts.pxi  context.pyx  flow.pxd  flow.pyx  message.py  protocol.pxd  protocol.pyx  reflex.pxd  socket.pyx  stats.py
lib/mock/: dummy_client.py  dummy_controller.py  dummy_storage.py  example.py  functional_test.py  reflex.py  simple_delegator.py
lib_docker/: asyncreflex.dockerfile  libjiffy.dockerfile  libpocket.dockerfile
storage/: Dockerfile  README.md  get_deps.sh  ix.conf.sample  meson.build
storage/apps/: init.c  reflex_ix_client.c  reflex_server.c
storage/core/: cfg.c  dpdk.c  ethfg.c  ethqueue.c  mbuf.c  mempool.c  meson.build  sys_arch.c  syscall.c
storage/inc/: bufopts.h  lwipopts.h  lwippools.h  sys_arch.h
storage/libix/: buf.h  ixev.c
storage/lwip_if/: init.c  ip4.c  memp.c  memp.h  meson.build  net.c  net.h  netif.c  pbuf.c  tcp.c  tcp_api.c  tcp_in.c  tcp_out.c  timeouts.c
storage/lwip_if/priv/: tcp_priv.h
storage/nvme/: meson.build  nvmedev.c  registering.c  scheduling.c  sw_counter.c  sw_queue.c  (+1 more)
(+17 files in other folders)
