[build-system]
requires = [
  "poetry-core>=1.0.0",
  "Cython~=3.0.11",
  "setuptools>=45.0"
]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "asyncreflex"
version = "0.6.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "asyncreflex" }]
include = [{ path = "asyncreflex/**/*.so", format = "wheel" }]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.10"  # Adjust this to your required Python version

[tool.poetry.dev-dependencies]
# Add your development dependencies here
